run bower install after npm install

--- a/package.json
+++ b/package.json
@@ -8,5 +8,9 @@
         "grunt-express": "~1.2.1",
         "grunt-contrib-watch": "~0.6.0",
         "grunt-open": "~0.2.3"
+    },
+    "scripts": {
+        "postinstall": "bower install",
+        "start": "grunt server"
     }
 }
