--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
         "matchdep": "~0.3.0",
         "grunt-express": "~1.2.1",
         "grunt-contrib-watch": "~0.6.0",
-        "grunt-open": "~0.2.3"
+        "grunt-open": "~0.2.3",
+        "bower": "1.4.1"
     },
     "scripts": {
-        "postinstall": "bower install",
+        "postinstall": "./node_modules/bower/bin/bower install && bower install",
         "start": "grunt server"
     }
 }
