--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
         "bower": "1.4.1"
     },
     "scripts": {
-        "postinstall": "./node_modules/bower/bin/bower install && bower install",
+        "postinstall": "bower install",
         "start": "grunt server"
     }
 }
