--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
         "grunt-open": "~0.2.3",
         "bower": "1.4.1"
     },
+    "engines": {
+        "node": "4.1.1"
+    },
     "scripts": {
-        "postinstall": "bower install",
+        "postinstall": "node node_modules/bower/bin/bower install",
         "start": "grunt server"
     }
 }
