--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
         "node": "4.1.1"
     },
     "scripts": {
-        "postinstall": "node node_modules/bower/bin/bower install",
+        "postinstall": "node ./node_modules/bower/bin/bower install",
         "start": "grunt server"
     }
 }
