--- a/package.json
+++ b/package.json
@@ -1,20 +1,21 @@
 {
     "name": "camila.riveron.tictactoe",
     "version": "0.0.0",
-    "dependencies": {},
+    "dependencies": {
+        "bower": "1.4.1"
+    },
     "devDependencies": {
         "grunt": "~0.4.5",
         "matchdep": "~0.3.0",
         "grunt-express": "~1.2.1",
         "grunt-contrib-watch": "~0.6.0",
-        "grunt-open": "~0.2.3",
-        "bower": "1.4.1"
+        "grunt-open": "~0.2.3"
     },
     "engines": {
         "node": "4.1.1"
     },
     "scripts": {
-        "postinstall": "node ./node_modules/bower/bin/bower install",
+        "postinstall": "bower install",
         "start": "grunt server"
     }
 }
